2006-07-11  Marc Singer  <elf@buici.com>

	* src/arch-arm/entry/reset.c: Fix for register being clobbered in
	apex_relocate() and messing with PUTC_LL().

2006-07-10  Marc Singer  <elf@buici.com>

	* src/apex/cmd-help.c (cmd_help): Added option to suppress the
	short help descriptions.  It saves a little bit on memory.

	* src/arch-arm/entry/apex.lds.S: Optimized the RAM memory
	footprint, especially in the xbss section.  Added stack_size
	configuration parameter. 

	* src/apex/cmd-boot.c (cmd_boot): Boot address may not come from
	the environment.
	(atag_commandline): Simplified the command line from environment
	code such that there is no code to read fro environment when there
	is no environment.

2006-06-02  Marc Singer  <elf@buici.com>

	* Makefile: Release 1.3.28.  Added dm9000 mac address programming.

2006-06-02  Marc Singer  <elf@cerise.buici.com>

	* Makefile: Release 1.3.27.  Version for companion as well.

2006-06-01  Marc Singer  <elf@buici.com>

	* src/mach-lh7a40x/relocate-companion.c: Fixed the section of the
	relocation function.  Added console feedback for the bootstrap.

	* src/drivers-lh/drv-mmc.c: Added proper configuration checks for
	the companion relocation.

	* Many changes to the environment handling so that the environment
	is present, and usable, even if the commands to manipulate it are
	not.

	* src/apex/cmd-env.c: Fixed a stupid error in the environment
	command code that required the setenv command in order to use the
	printenv command.

2006-05-29  Marc Singer  <elf@buici.com>

	* src/drivers/drv-ext2.c (ext2_info): Fixed the way that
	partitions are detected so that changing partitions will properly
	flush cached information about the filesystem.

2006-05-28  Marc Singer  <elf@buici.com>

	* Makefile (SUBLEVEL): Rolled to 1.3.25 for the MMC driver fixes.

	* src/arch-arm/entry/apex.lds.S: The bootstrap data location is
	properly calculated.

	* src/drivers-lh/drv-mmc.c: MMC driver can read multiple blocks.